--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
+
 #spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/dscatalog
+spring.datasource.url=jdbc:postgresql://localhost:5433/dslist
 spring.datasource.username=postgres
 spring.datasource.password=1234567
 
